# PacketMako

./: README.md  env.yaml  main.py  pyproject.toml  requirements.txt
data/: test.json  train.json
intial_models/Btye-TrAice/: .gitignore  LICENSE  README.md  byte_model_trainning.py  full_archetecture.py  main.py  pcap_to_btyes.py  pretrained_byte_model_trainning.py  requirements.txt  trAice_env.yaml
intial_models/TrAice-llama2/: LICENSE
intial_models/TrAice-llama3/: README.md
scripts/: manual_test_tokenizer.py
src/evaluation/: base_byt5_eval.py
src/finetuning/: simple_2d_llama-1b.py
src/model/: finetunehybridbyt5.py  hybridbyt5.py  multimodaltokenizer.py  pcaptokenizer.py  test_token.py
src/model/test/: hybridbyt5-test.py
src/preprocessing/: pcap_to_paragraph.py  sample_generator.py
src/tokenization/: hybrid_byt5_tokenizer.py
src/utils/: filter_data.py  pcaps_to_streams.py  sample_generator.py
test/integration/: test_tokenizer_model.py
test/model/: test_hybridbyt5tokenizer.py  test_pcaptokenizer.py
